[package]
name = "rtlsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = { version = "3.2.1"}
rand = {version = "*"}
hashbrown = "0.14"
derive_more = { version = "*"}
minitrace = {version = "*", features = ["enable"]}
dashmap = "*"


[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "concurrent-bench"
harness = false

[[bench]]
name = "my-bench"
harness = false