[package]
name = "rtlsf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = { version = "3.2.1"}
rand = {version = "*"}
hashbrown = "0.14"
derive_more = { version = "*"}
minitrace = {version = "*", features = ["enable"]}
dashmap = "*"
log = "0.4.21"
env_logger = "0.11.3"


[dev-dependencies]
core_affinity = "0.8.1"
criterion = { version = "*", features = ["html_reports"] }
libc = "0.2"

[[bench]]
name = "concurrent-bench"
harness = false

[[bench]]
name = "my-bench"
harness = false
